# embed_work

./: CMakeLists.txt  ClockAPI.cpp  ClockAPI.h  LICENSE.md  License.md  Makefile  README.md  TTS_Test.txt  TTS_test.txt  Testing Process of the Weather Module.docx  app_controller.cpp  base64.h  bug.txt  bug2.txt  contribution workflow.md  main.cpp  max7219.cpp  max7219.h  patterns.h  snake.cpp  snake_game.cpp  snake_game.h  speech_recognition_test.txt  speech_to_text.cpp  speech_to_text_version2.cpp  test_notes.txt  weather.cpp  weather.h  weather_app  技术方案2025_02_12.docx
DRIVER/: main.cpp
DRIVER/DEEP_SEEK/: user_log.txt
DRIVER/MAX7219/: MAX7219  MAX7219.cpp  MAX7219.h  example_max7219.cpp
DRIVER/MPU6050/: CMakeLists.txt  MPU6050.cpp  MPU6050.h  MPU6050_example.cpp
DRIVER/PAJ7206/: PAJ7620.cpp  PAJ7620.h  PAJ7620_EXAMPLE.cpp
UbuntuWeather-master/: README.md  weather_fetch
WeatherProject/: main.cpp  weather.h
include/: AppEvent.h  AppStateMachine.h  AppStateManager.h  GestureHandler.h  GestureHandler_Event.h  MAX7219.h  MPU6050.h  MPU6050Ctrl.h  MPUHandler.h  PAJ7260U2.h  SensorCtrl.h  SpeechCtrl.h  SpeechRecognizer.h  VoiceCommandHandler.h  WeatherWrapper.h  app_controller.h  base64.h  keywords.h  snake.h  snake_game.h
install/: piper_phonemize
lib/Linux-x86_64/piper_phonemize/lib/: piper_phonemize
lib/Linux_aarch64/piper_phonemize/lib/: libespeak-ng.so.1.52.0.1  libpiper_phonemize.so.1.2.0
lib/Linux_aarch64/piper_phonemize/lib/pkgconfig/: espeak-ng.pc
lib/fi/lib/pkgconfig/: fmt.pc
lib/pi/lib/: libespeak-ng.so.1.52.0.1  libpiper_phonemize.so.1.2.0
lib/pi/lib/pkgconfig/: espeak-ng.pc
lib/si/lib/pkgconfig/: spdlog.pc
src/: AppStateMachine.cpp  AppStateManager.cpp  EMBED_main.cpp  GestureHandler.cpp  MAX7219.cpp  MPU6050.cpp  MPU6050Ctrl.cpp  PAJ7260U2.cpp  PiperSynthesizer.cpp  PiperSynthesizer.h  SensorCtr.cpp  SensorCtrl.cpp  SpeechCtrl.cpp  SpeechRecognizer.cpp  WeatherWrapper.cpp  app_controller.cpp  main.cpp  snake.cpp  snake_game.cpp  weather.cpp
